# ClamAV-GUI

./: .gitignore  CMakeLists.txt  ClamAV-GUI.c  ClamAV-GUI.cpp  ClamAV-GUI.h  ClamAV-GUI.rc  ClamAV-GUI.sln  ClamAV-GUI.vcproj  Pipes.c  Pipes.cpp  clamav-gui.c  clamav-gui.h  clamav-gui.rc  nocrt.c  pipes.c  resource.h
